# sandbox

./: .gitignore  CMakeLists.txt  meson.build
benchmarks/: CMakeLists.txt
benchmarks/math/: geometric.cpp  vectors.cpp
sources/core/: handle.cpp  handle.hpp  module.cpp  value.cpp  value.hpp
sources/helpers/: strings.cpp  strings.hpp
sources/io/: indentation.hpp  json.cpp  json.hpp
sources/math/: constants.hpp  geometric.hpp  interpolation.hpp  matrix.hpp  quaternion.hpp  vectors-soa.hpp  vectors-view.hpp  vectors.hpp
src/: main.cpp  module.cpp  module.h
src/core/: module.cpp  module.h  value.cpp  value.h
src/helpers/: strings.cpp
src/io/: json.cpp  json.h
src/math/: geometric.h  interpolation.h  quaternion.h  vectors-soa.h  vectors-view.h  vectors.h
tests/: CMakeLists.txt
tests/core/: handle.cpp
tests/math/: quaternion.cpp  vectors-view.cpp  vectors.cpp
